--- a/livepoll/src/main/resources/static/index.html
+++ b/livepoll/src/main/resources/static/index.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>wel</title>
-    <script type="application/javascript" src="//cdn.jsdelivr.net/npm/clappr@latest/dist/clappr.min.js"></script>
+    <script type="application/javascript" src="//cdn.jsdelivr.net/npm/@clappr/player@latest/dist/clappr.min.js"></script>
     <script type="text/javascript"
             src="//cdn.jsdelivr.net/gh/clappr/clappr-level-selector-plugin@latest/dist/level-selector.min.js"></script>
     <script type="text/javascript"
-            src="//cdn.jsdelivr.net/clappr.thumbnails-plugin/latest/clappr-thumbnails-plugin.js"></script>
+            src="//cdn.jsdelivr.net/npm/clappr-thumbnails-plugin@3"></script>
 </head>
 <body>
 <div id="player"></div>
-
 </body>
 <script>
     var player = new Clappr.Player({
